[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cryptlib"
version = "0.0.3"
authors = [
  { name="Cesar Ruano", email="cesar.ruanoalv@gmail.com" },
]
description = "Asymetric encryption wrapper."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

dependencies = [
  "cryptography",
]

[project.urls]
"Homepage" = "https://github.com/cesarruano/cryptlib"

